syntax = "proto3";

package proto;

service PubBroker {
	rpc Publish(Publication) returns (PubResponse) {}
}

service SubBroker {
	rpc Subscribe(stream SubRequest) returns (stream Publication) {}
}

service InterBroker {
	rpc Echo(Publication) returns (EchoResponse) {}
	rpc Ready(Publication) returns (ReadyResponse) {}
}

message Publication {
	int32 PubType = 1;
	int64 PublisherID = 2;
	int64 PublicationID = 3;
	int64 Topic = 4;
	int64 BrokerID = 5;
	bytes Content = 6;
	repeated bytes MACs = 7;
}

message PubResponse{
	bool AlphaReached = 1;
}

message EchoResponse{}

message ReadyResponse{}

message SubRequest {
	int64 SubscriberID = 1;
	repeated int64 Topics = 2;
}
